--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
                     <div class="hosting-title">
                         <h2 class="section-title">Hébergements à Marseille</h2>
                     </div>
-                    <div class="popular-cards">
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/fred-kleber.jpg"
+                    <div class="hosting-cards">
+                            <a class="hosting-cards_card" href="#">
+                                <img class="hosting-cards_card-img" src="./images/hosting/fred-kleber.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel du port</h3>
                                         <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
@@ -108,13 +107,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/febrian-zakaria.jpg"
+                            </a>
+                        <a href="#" class="hosting-cards_card">
+                                <img  class="hosting-cards_card-img" src="./images/hosting/febrian-zakaria.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Chez Amina</h3>
                                         <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
@@ -128,13 +125,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
                         </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/reisetopia.jpg"
+                        <a href="#" class="hosting-cards_card">
+                                <img class="hosting-cards_card-img" src="./images/hosting/reisetopia.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel Les mouettes</h3>
                                         <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
@@ -148,13 +143,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
                         </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/annie-spratt.jpg"
+                        <a href="#" class="hosting-cards_card">
+                                <img class="hosting-cards_card-img" src="./images/hosting/annie-spratt.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Hôtel de la mer</h3>
                                         <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
@@ -168,13 +161,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
                         </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/marcus-loke.jpg"
+                        <a href="#" class="hosting-cards_card">
+                                <img class="hosting-cards_card-img" src="./images/hosting/marcus-loke.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Auberge La Canebière</h3>
                                         <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
@@ -188,13 +179,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
                         </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hosting/nicate-lee.jpg"
+                        <a href="#" class="hosting-cards_card">
+                                <img class="hosting-cards_card-img" src="./images/hosting/nicate-lee.jpg"
                                     alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
+                                <div class="hosting-cards_card-content">
                                     <div class="card-txt">
                                         <h3 class="card-title">Auberge Le Panier</h3>
                                         <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
@@ -208,10 +197,11 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
                         </a>
                     </div>
-
+                    <div class="hosting-plus">
+                        <p>Afficher plus</p>
+                    </div>
                 </section>
                 <section class="popular">
                     <div class="popular-title">
