--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <form class="search-bar" action="#">
                     <div class="search-bar_icon">
-                        <i class="fa-solid fa-location-dot" aria-hidden="true"></i> 
+                        <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
                     </div>
                     <input class="search-bar_input" type="text" placeholder="localisation" value="Marseille, France">
                     <button class="search-bar_btn" type="submit">
@@ -271,6 +271,28 @@
                         </a>
                     </div>
                 </section>
+            </div>
+            <div class="activities">
+                <h2 class="section-title">Activités à Marseille</h2>
+
+                <div class="avtivities-cards">
+                    <div class="activities-cards_card">
+                        <img src="images/activites/reno-laithienne.jpg" alt="">
+                        <p>Vieux-Port</p>
+                    </div>
+                    <div class="activities-cards_card">
+                        <img src="images/activites/paul-hermann.jpg" alt="">
+                        <p>Fort de Pomègues</p>
+                    </div>
+                    <div class="activities-cards_card">
+                        <img src="images/activites/kilyan-sockalingum.jpg" alt="">
+                        <p>Parc national des Calanques</p>
+                    </div>
+                    <div class="activities-cards_card">
+                        <img src="images/activites/florian-wehde.jpg" alt="">
+                        <p>Notre-Dame-de-la-Garde</p>
+                    </div>
+                </div>
             </div>
         </main>
         <footer class="footer">
