style activities desktop, tablette and mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/hosting.css">
-    
+    <link rel="stylesheet" href="./css/activity.css">
 </head>
 <body>
     <div class="main-container">
@@ -274,23 +274,22 @@
             </div>
             <div class="activities">
                 <h2 class="section-title">Activités à Marseille</h2>
-
-                <div class="avtivities-cards">
+                <div class="activities-cards">
                     <div class="activities-cards_card">
-                        <img src="images/activites/reno-laithienne.jpg" alt="">
-                        <p>Vieux-Port</p>
+                        <img class="activities-cards_card-img" src="images/activites/reno-laithienne.jpg" alt="">
+                        <p  class="activities-cards_card-p">Vieux-Port</p>
                     </div>
                     <div class="activities-cards_card">
-                        <img src="images/activites/paul-hermann.jpg" alt="">
-                        <p>Fort de Pomègues</p>
+                        <img class="activities-cards_card-img" src="images/activites/paul-hermann.jpg" alt="">
+                        <p  class="activities-cards_card-p">Fort de Pomègues</p>
                     </div>
                     <div class="activities-cards_card">
-                        <img src="images/activites/kilyan-sockalingum.jpg" alt="">
-                        <p>Parc national des Calanques</p>
+                        <img class="activities-cards_card-img" src="images/activites/kilyan-sockalingum.jpg" alt="">
+                        <p  class="activities-cards_card-p">Parc national des Calanques</p>
                     </div>
                     <div class="activities-cards_card">
-                        <img src="images/activites/florian-wehde.jpg" alt="">
-                        <p>Notre-Dame-de-la-Garde</p>
+                        <img class="activities-cards_card-img" src="images/activites/florian-wehde.jpg" alt="">
+                        <p  class="activities-cards_card-p">Notre-Dame-de-la-Garde</p>
                     </div>
                 </div>
             </div>
