fix sized and spaces

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <main>
             <div class="search">
-                <div>
+                <div class="search-headline">
                     <h1 class="search-title">Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p class="search-subtitle">En plein centre-ville ou en pleine nature</p>
                 </div>
@@ -59,21 +59,21 @@
                     <div class="search-filters_group">
                         <label class="search-filters_label" for="familial">
                             <input class="search-filters_input" type="checkbox" id="familial" name="familial" />
-                            <i class="fa-solid fa-person"></i>
+                            <i class=" fa-solid fa-person"></i>
                             <p class="search-filters_label-p">Familial</p>
                         </label>
                     </div>
                     <div class="search-filters_group">
                         <label class="search-filters_label" for="romantique">
                             <input class="search-filters_input" type="checkbox" id="romantique" name="romantique" />
-                            <i class="fa-solid fa-heart"></i>
+                            <i class="fa-lg fa-solid fa-heart"></i>
                             <p class="search-filters_label-p">Romantique</p>
                         </label>
                     </div>
                     <div class="search-filters_group">
                         <label class="search-filters_label" for="Nospepites">
                             <input class="search-filters_input" type="checkbox" id="Nospepites" name="Nospepites" />
-                            <i class="fa-sharp fa-solid fa-fire"></i>
+                            <i class="fa-lg fa-sharp fa-solid fa-fire"></i>
                             <p class="search-filters_label-p">Nos pépites</p>
                         </label>
                     </div>
