--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                     <div class="hosting-cards">
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Hôtel du port</h3>
                                     <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
@@ -108,7 +110,9 @@
                         </a>
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Hôtel Chez Amina</h3>
                                     <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
@@ -125,7 +129,9 @@
                         </a>
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Hôtel Les mouettes</h3>
                                     <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
@@ -142,7 +148,9 @@
                         </a>
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Hôtel de la mer</h3>
                                     <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
@@ -159,7 +167,9 @@
                         </a>
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Auberge La Canebière</h3>
                                     <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
@@ -176,7 +186,9 @@
                         </a>
                         <a href="#">
                             <article class="hosting-cards_card card">
-                                <img class="hosting-cards_card-img" src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="hosting-cards_card-img_wrapper">
+                                    <img class="hosting-cards_card-img" src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="hosting-cards_card-content">
                                     <h3 class="card-title">Auberge Le Panier</h3>
                                     <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
