add wrap to popular img

--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
                     <div class="popular-cards">
                         <a href="#">
                             <article class="popular-cards_card card">
-                                <img class="popular-cards_card-img" src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="popular-cards_card-img_wrapper">
+                                    <img class="popular-cards_card-img" src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="popular-cards_card-content">
                                     <div class="popular-cards_card-text">
                                         <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -236,7 +238,9 @@
                         </a>
                         <a href="#">
                             <article class="popular-cards_card card">
-                                <img class="popular-cards_card-img" src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="popular-cards_card-img_wrapper">
+                                    <img class="popular-cards_card-img" src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="popular-cards_card-content">
                                     <div class="popular-cards_card-text">
                                         <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -255,7 +259,9 @@
                         </a>
                         <a href="#">
                             <article class="popular-cards_card card">
-                                <img class="popular-cards_card-img" src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <figure class="popular-cards_card-img_wrapper">
+                                    <img class="popular-cards_card-img" src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                </figure>
                                 <div class="popular-cards_card-content">
                                     <div class="popular-cards_card-text">
                                         <h3 class="card-title">Hôtel Bleu et Blanc</h3>
