--- a/index.html
+++ b/index.html
@@ -49,32 +49,40 @@
                 </form>
                 <fieldset class="search-filters">
                     <legend class="search-filters_title">Filtres</legend>
-                    <div class="search-filters_group">
-                        <label class="search-filters_label" for="economique">
-                            <input class="search-filters_input" type="checkbox" id="economique" name="economique" />
+                    <div class="search-filters_filter">
+                        <label class="search-filters_filter-label" for="economique">
+                            <input class="search-filters_filter-input" type="checkbox" id="economique" name="economique" />
                             <i class="fa-solid fa-money-bill-wave"></i>
-                            <p class="search-filters_label-p">Économique</p>
+                            <span>
+                                <p class="search-filters_filter-name">Économique</p>
+                            </span>
                         </label>
                     </div>
-                    <div class="search-filters_group">
-                        <label class="search-filters_label" for="familial">
-                            <input class="search-filters_input" type="checkbox" id="familial" name="familial" />
+                    <div class="search-filters_filter">
+                        <label class="search-filters_filter-label" for="familial">
+                            <input class="search-filters_filter-input" type="checkbox" id="familial" name="familial" />
                             <i class=" fa-solid fa-person"></i>
-                            <p class="search-filters_label-p">Familial</p>
+                            <span>
+                                <p class="search-filters_filter-name">Familial</p>
+                            </span>
                         </label>
                     </div>
-                    <div class="search-filters_group">
-                        <label class="search-filters_label" for="romantique">
-                            <input class="search-filters_input" type="checkbox" id="romantique" name="romantique" />
+                    <div class="search-filters_filter">
+                        <label class="search-filters_filter-label" for="romantique">
+                            <input class="search-filters_filter-input" type="checkbox" id="romantique" name="romantique" />
                             <i class="fa-lg fa-solid fa-heart"></i>
-                            <p class="search-filters_label-p">Romantique</p>
+                            <span>
+                                <p class="search-filters_filter-name">Romantique</p>
+                            </span>
                         </label>
                     </div>
-                    <div class="search-filters_group">
-                        <label class="search-filters_label" for="Nospepites">
-                            <input class="search-filters_input" type="checkbox" id="Nospepites" name="Nospepites" />
+                    <div class="search-filters_filter">
+                        <label class="search-filters_filter-label" for="Nospepites">
+                            <input class="search-filters_filter-input" type="checkbox" id="Nospepites" name="Nospepites" />
                             <i class="fa-lg fa-sharp fa-solid fa-fire"></i>
-                            <p class="search-filters_label-p">Nos pépites</p>
+                            <span>
+                                <p class="search-filters_filter-name">Nos pépites</p>
+                            </span>
                         </label>
                     </div>
                 </fieldset>
