--- a/index.html
+++ b/index.html
@@ -51,38 +51,30 @@
                     <legend class="search-filters_title">Filtres</legend>
                     <div class="search-filters_filter">
                         <label class="search-filters_filter-label" for="economique">
-                            <input class="search-filters_filter-input" type="checkbox" id="economique" name="economique" />
+                            <input class="search-filters_filter-input" type="checkbox" id="economique" name="economique">
                             <i class="fa-solid fa-money-bill-wave"></i>
-                            <span>
-                                <p class="search-filters_filter-name">Économique</p>
-                            </span>
+                            <span class="search-filters_filter-name">Économique</span>
                         </label>
                     </div>
                     <div class="search-filters_filter">
                         <label class="search-filters_filter-label" for="familial">
-                            <input class="search-filters_filter-input" type="checkbox" id="familial" name="familial" />
+                            <input class="search-filters_filter-input" type="checkbox" id="familial" name="familial">
                             <i class=" fa-solid fa-person"></i>
-                            <span>
-                                <p class="search-filters_filter-name">Familial</p>
-                            </span>
+                            <span class="search-filters_filter-name">Familial</span>
                         </label>
                     </div>
                     <div class="search-filters_filter">
                         <label class="search-filters_filter-label" for="romantique">
-                            <input class="search-filters_filter-input" type="checkbox" id="romantique" name="romantique" />
+                            <input class="search-filters_filter-input" type="checkbox" id="romantique" name="romantique">
                             <i class="fa-lg fa-solid fa-heart"></i>
-                            <span>
-                                <p class="search-filters_filter-name">Romantique</p>
-                            </span>
+                            <span class="search-filters_filter-name">Romantique</span>
                         </label>
                     </div>
                     <div class="search-filters_filter">
                         <label class="search-filters_filter-label" for="Nospepites">
-                            <input class="search-filters_filter-input" type="checkbox" id="Nospepites" name="Nospepites" />
+                            <input class="search-filters_filter-input" type="checkbox" id="Nospepites" name="Nospepites">
                             <i class="fa-lg fa-sharp fa-solid fa-fire"></i>
-                            <span>
-                                <p class="search-filters_filter-name">Nos pépites</p>
-                            </span>
+                            <span class="search-filters_filter-name">Nos pépites</span>
                         </label>
                     </div>
                 </fieldset>
