add title to link for accesibility issues

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     <p class="search-subtitle">En plein centre-ville ou en pleine nature</p>
                 </div>
                 <form class="search-bar" action="#">
-                    <div class="search-bar_icon">
+                    <label for="localisation" class="search-bar_icon">
                         <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
-                    </div>
-                    <input class="search-bar_input" type="text" placeholder="localisation" value="Marseille, France">
+                    </label>
+                    <input class="search-bar_input" id="localisation" type="text" placeholder="localisation" value="Marseille, France">
                     <button class="search-bar_btn" type="submit">
                         <span class="is-hidden-mobile">Rechercher</span>
                         <i class="is-visible-mobile fa-solid fa-magnifying-glass"></i>
@@ -89,9 +89,9 @@
                         <h2 class="section-title">Hébergements à Marseille</h2>
                     </div>
                     <div class="hosting-cards">
-                        <a href="#">
+                        <a href="#" title="Hôtel du port">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper" title="Hôtel du port">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -108,9 +108,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Hôtel Chez Amina">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper" title="Hôtel Chez Amina">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -127,9 +127,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Hôtel Les mouettes">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper" title="Hôtel Les mouettes">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -146,9 +146,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Hôtel de la mer">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper"  title="Hôtel de la mer">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -165,9 +165,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Auberge La Canebière">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper"  title="Auberge La Canebière">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -184,9 +184,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Auberge Le Panier">
                             <article class="hosting-cards_card card">
-                                <figure class="hosting-cards_card-img_wrapper">
+                                <figure class="hosting-cards_card-img_wrapper" title="Auberge Le Panier">
                                     <img class="hosting-cards_card-img" src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="hosting-cards_card-content">
@@ -214,9 +214,9 @@
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="popular-cards">
-                        <a href="#">
+                        <a href="#" title="Hôtel Le soleil du matin">
                             <article class="popular-cards_card card">
-                                <figure class="popular-cards_card-img_wrapper">
+                                <figure class="popular-cards_card-img_wrapper" title="Hôtel Le soleil du matin">
                                     <img class="popular-cards_card-img" src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="popular-cards_card-content">
@@ -236,9 +236,9 @@
                             </article>
 
                         </a>
-                        <a href="#">
+                        <a href="#" title="Chambres d’hôtes Au cœur de l’eau">
                             <article class="popular-cards_card card">
-                                <figure class="popular-cards_card-img_wrapper">
+                                <figure class="popular-cards_card-img_wrapper"  title="Chambres d’hôtes Au cœur de l’eau">
                                     <img class="popular-cards_card-img" src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="popular-cards_card-content">
@@ -257,9 +257,9 @@
                                 </div>
                             </article>
                         </a>
-                        <a href="#">
+                        <a href="#" title="Hôtel Bleu et Blanc">
                             <article class="popular-cards_card card">
-                                <figure class="popular-cards_card-img_wrapper">
+                                <figure class="popular-cards_card-img_wrapper" title="Hôtel Bleu et Blanc">
                                     <img class="popular-cards_card-img" src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 </figure>
                                 <div class="popular-cards_card-content">
